2000-02-14  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: close data socket when switching to no-rest mode.

2000-01-13  Alexander V. Lukyanov  <lav@yars.free.net>

	* HttpDir.cc: fix cycling on & in file names when no &amp; etc match.

2000-01-11  Alexander V. Lukyanov  <lav@yars.free.net>

	* NetAccess.cc: cast off const for solaris 2.5.1.

2000-01-08  Alexander V. Lukyanov  <lav@yars.free.net>

	* NetAccess.h, NetAccess.cc, ftpclass.cc, Http.cc: (SocketConnect,
	  SocketAddrLen) new methods; use them. This fixes a problem on NetBSD.

1999-12-19  Alexander V. Lukyanov  <lav@yars.free.net>

	* HttpDir.cc: decode &amp and similar. Skip ~ for ListInfo.
	* GetJob.cc: use head version.

1999-12-16  Alexander V. Lukyanov  <lav@yars.free.net>

	* LocalAccess.cc: use mainstream fixed version.
	* Http.cc: send port to proxy; encode hostname properly.
	* url.h: use head version.

1999-11-16  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: don't clear SYNC_FLAG on 1xx replies.

1999-10-22  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.h, Http.cc: (use_head) new member; hftp:use-head new setting;
	  use GET instead of HEAD if !use_head.
	* resource.cc: (hftp:use-head) new setting.

1999-10-21  Alexander V. Lukyanov  <lav@yars.free.net>

	* HttpDir.cc: compare ftp:// with hftp:// properly.

1999-10-20  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileAccess.cc: (AnonymousLogin) reset cwd and home.
	* Http.h, Http.cc: add HFtp::Login; don't send password in URI.
	* commands.cc: do Login after Connect, not reverse.

1999-10-19  Alexander V. Lukyanov  <lav@yars.free.net>

	* HttpDir.cc: set hour/minute to 0 if they are not available.
	* Http.cc: avoid memory leak in encode_string; add support for
	  non-anonymous ftp over http.
	* url.cc: (url::encode_string) don't malloc buffer;
	  quote all if quote==0.

1999-10-19  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: don't send data in STORE mode until header is sent.